{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 202,
  "lineage": "dca023a7-f4c1-5ba8-598f-2904638468d3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0533deb43fac810c1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:subnet/subnet-0533deb43fac810c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0533deb43fac810c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647005920903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f39324a20b50edf6"
          }
        },
        {
          "index_key": "subnet-0566c0b10d091f0da",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:subnet/subnet-0566c0b10d091f0da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0566c0b10d091f0da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647005920903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f39324a20b50edf6"
          }
        },
        {
          "index_key": "subnet-09900874f500230b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:subnet/subnet-09900874f500230b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09900874f500230b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647005920903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f39324a20b50edf6"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:vpc/vpc-0f39324a20b50edf6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02447c14c423b2769",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0552e8e7e935b980b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f39324a20b50edf6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ae7b305ef91d511c",
            "owner_id": "647005920903",
            "tags": {
              "Name": "default-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb_1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:loadbalancer/app/counter-alb/b11345e2d594d7ab",
            "arn_suffix": "app/counter-alb/b11345e2d594d7ab",
            "desync_mitigation_mode": "defensive",
            "dns_name": "counter-alb-1527359361.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:loadbalancer/app/counter-alb/b11345e2d594d7ab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "counter-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e0fa20b330416ffa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0533deb43fac810c1"
              },
              {
                "subnet_id": "subnet-0566c0b10d091f0da"
              },
              {
                "subnet_id": "subnet-09900874f500230b2"
              }
            ],
            "subnets": [
              "subnet-0533deb43fac810c1",
              "subnet-0566c0b10d091f0da",
              "subnet-09900874f500230b2"
            ],
            "vpc_id": "vpc-0f39324a20b50edf6",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default",
            "module.alb_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:listener/app/counter-alb/b11345e2d594d7ab/05062715009af9f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:targetgroup/counter-http/533926334b585b03",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:listener/app/counter-alb/b11345e2d594d7ab/05062715009af9f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:loadbalancer/app/counter-alb/b11345e2d594d7ab",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default",
            "module.alb_1.aws_lb.alb",
            "module.alb_1.aws_lb_target_group.http_tg",
            "module.alb_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:targetgroup/counter-http/533926334b585b03",
            "arn_suffix": "targetgroup/counter-http/533926334b585b03",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:647005920903:targetgroup/counter-http/533926334b585b03",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "counter-http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f39324a20b50edf6"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:security-group/sg-0e0fa20b330416ffa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0fa20b330416ffa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "647005920903",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39324a20b50edf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4013144886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e0fa20b330416ffa",
            "security_group_rule_id": "sgr-05f05edd96fca24f8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": -1,
            "id": "sgrule-314444475",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0e0fa20b330416ffa",
            "security_group_rule_id": "sgr-001541762346f35f0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2868537324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e0fa20b330416ffa",
            "security_group_rule_id": "sgr-09968ce2a90a3bd4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.asg_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:security-group/sg-06021982a141cb35e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06021982a141cb35e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0fa20b330416ffa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg_sg",
            "name_prefix": "",
            "owner_id": "647005920903",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_sg"
            },
            "tags_all": {
              "Name": "asg_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39324a20b50edf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1206210287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06021982a141cb35e",
            "security_group_rule_id": "sgr-0942c6ae9ccb14398",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.asg_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-197993400",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06021982a141cb35e",
            "security_group_rule_id": "sgr-0921d8d38380c4cd0",
            "self": false,
            "source_security_group_id": "sg-0e0fa20b330416ffa",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb_sg.aws_security_group.sg",
            "module.asg_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.natgw_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfc7e717cf5e162e",
            "association_id": "eipassoc-0765a82ee7128b152",
            "domain": "vpc",
            "id": "eipalloc-0cfc7e717cf5e162e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c99bdc5b88473b57",
            "private_dns": "ip-172-31-33-8.ap-southeast-1.compute.internal",
            "private_ip": "172.31.33.8",
            "public_dns": "ec2-18-141-116-154.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.116.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.natgw_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfc7e717cf5e162e",
            "connectivity_type": "public",
            "id": "nat-0083da4e800277449",
            "network_interface_id": "eni-0c99bdc5b88473b57",
            "private_ip": "172.31.33.8",
            "public_ip": "18.141.116.154",
            "subnet_id": "subnet-0533deb43fac810c1"
          },
          "dependencies": [
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default",
            "module.natgw_1.aws_eip.eip",
            "module.private_subnet_resources.aws_route_table.private_route_table"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.natgw_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "natgw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07f3b7f478bfcc7f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0083da4e800277449",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f3b7f478bfcc7f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default",
            "module.natgw_1.aws_eip.eip",
            "module.natgw_1.aws_nat_gateway.nat_gateway",
            "module.private_subnet_resources.aws_route_table.private_route_table"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_subnet_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:route-table/rtb-07f3b7f478bfcc7f0",
            "id": "rtb-07f3b7f478bfcc7f0",
            "owner_id": "647005920903",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0083da4e800277449",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39324a20b50edf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_subnet_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcb4de4f0cf05eed",
            "route_table_id": "rtb-07f3b7f478bfcc7f0",
            "subnet_id": "subnet-0543127ada13127b9"
          },
          "dependencies": [
            "data.aws_subnet.public_subnets",
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default",
            "module.private_subnet_resources.aws_route_table.private_route_table",
            "module.private_subnet_resources.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc033e1349def032",
            "route_table_id": "rtb-07f3b7f478bfcc7f0",
            "subnet_id": "subnet-099e84f6e74c352b6"
          },
          "dependencies": [
            "data.aws_subnet.public_subnets",
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default",
            "module.private_subnet_resources.aws_route_table.private_route_table",
            "module.private_subnet_resources.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0568ef9c5cbb3b607",
            "route_table_id": "rtb-07f3b7f478bfcc7f0",
            "subnet_id": "subnet-09981d2538d9d658b"
          },
          "dependencies": [
            "data.aws_subnet.public_subnets",
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default",
            "module.private_subnet_resources.aws_route_table.private_route_table",
            "module.private_subnet_resources.aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:subnet/subnet-0543127ada13127b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0543127ada13127b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647005920903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-southeast-1a-private-subnet",
              "Type": "private"
            },
            "tags_all": {
              "Name": "ap-southeast-1a-private-subnet",
              "Type": "private"
            },
            "vpc_id": "vpc-0f39324a20b50edf6"
          },
          "dependencies": [
            "data.aws_subnet.public_subnets",
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:subnet/subnet-099e84f6e74c352b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099e84f6e74c352b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647005920903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-southeast-1b-private-subnet",
              "Type": "private"
            },
            "tags_all": {
              "Name": "ap-southeast-1b-private-subnet",
              "Type": "private"
            },
            "vpc_id": "vpc-0f39324a20b50edf6"
          },
          "dependencies": [
            "data.aws_subnet.public_subnets",
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:647005920903:subnet/subnet-09981d2538d9d658b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09981d2538d9d658b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647005920903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-southeast-1c-private-subnet",
              "Type": "private"
            },
            "tags_all": {
              "Name": "ap-southeast-1c-private-subnet",
              "Type": "private"
            },
            "vpc_id": "vpc-0f39324a20b50edf6"
          },
          "dependencies": [
            "data.aws_subnet.public_subnets",
            "data.aws_subnets.all_subnets",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}